copy http stream before returning to enable closing the httpurlconnection completely